--- a/localisation/AML_countries_l_english.yml
+++ b/localisation/AML_countries_l_english.yml
@@ -35,6 +35,282 @@
  ORE_democratic_ADJ:0 "Oregonian"
  ORE_neutrality_ADJ:0 "Oregonian"
  ORE_communism_ADJ:0 "Oregonian"
+ KUM_fascism:0 "Expansionist Kumari"
+ KUM_fascism_DEF:0 "Expansionist Kumari"
+ KUM_democratic:0 "Kumari"
+ KUM_democratic_DEF:0 "Kumari"
+ KUM_neutrality:0 "Kumari"
+ KUM_neutrality_DEF:0 "Kumari"
+ KUM_communism:0 "Kumari Peoples' Republic"
+ KUM_communism_DEF:0 "The Kumari Peoples' Republic"
+ KUM_fascism_ADJ:0 "Kumari"
+ KUM_democratic_ADJ:0 "Kumari"
+ KUM_neutrality_ADJ:0 "Kumari"
+ KUM_communism_ADJ:0 "Kumari"
+ MKU_fascism:0 "Expansionist Meru Kumari"
+ MKU_fascism_DEF:0 "Expansionist Meru Kumari"
+ MKU_democratic:0 "Meru Kumari"
+ MKU_democratic_DEF:0 "Meru Kumari"
+ MKU_neutrality:0 "Meru Kumari"
+ MKU_neutrality_DEF:0 "Meru Kumari"
+ MKU_communism:0 "Meru Kumari Peoples' Republic"
+ MKU_communism_DEF:0 "The Meru Kumari Peoples' Republic"
+ MKU_fascism_ADJ:0 "Meru Kumari"
+ MKU_democratic_ADJ:0 "Meru Kumari"
+ MKU_neutrality_ADJ:0 "Meru Kumari"
+ MKU_communism_ADJ:0 "Meru Kumari"
+ CLA_fascism:0 "Expansionist Chola"
+ CLA_fascism_DEF:0 "Expansionist Chola"
+ CLA_democratic:0 "Chola"
+ CLA_democratic_DEF:0 "Chola"
+ CLA_neutrality:0 "Chola"
+ CLA_neutrality_DEF:0 "Chola"
+ CLA_communism:0 "Chola Peoples' Republic"
+ CLA_communism_DEF:0 "The Chola Peoples' Republic"
+ CLA_fascism_ADJ:0 "Cholan"
+ CLA_democratic_ADJ:0 "Cholan"
+ CLA_neutrality_ADJ:0 "Cholan"
+ CLA_communism_ADJ:0 "Cholan"
+ PTY_fascism:0 "Expansionist Pantiya"
+ PTY_fascism_DEF:0 "Expansionist Pantiya"
+ PTY_democratic:0 "Pantiya"
+ PTY_democratic_DEF:0 "Pantiya"
+ PTY_neutrality:0 "Pantiya"
+ PTY_neutrality_DEF:0 "Pantiya"
+ PTY_communism:0 "Pantiya Peoples' Republic"
+ PTY_communism_DEF:0 "The Pantiya Peoples' Republic"
+ PTY_fascism_ADJ:0 "Pantiyan"
+ PTY_democratic_ADJ:0 "Pantiyan"
+ PTY_neutrality_ADJ:0 "Pantiyan"
+ PTY_communism_ADJ:0 "Pantiyan"
+ UTU_fascism:0 "Expansionist Utura"
+ UTU_fascism_DEF:0 "Expansionist Utura"
+ UTU_democratic:0 "Utura"
+ UTU_democratic_DEF:0 "Utura"
+ UTU_neutrality:0 "Utura"
+ UTU_neutrality_DEF:0 "Utura"
+ UTU_communism:0 "Utura Peoples' Republic"
+ UTU_communism_DEF:0 "The Utura Peoples' Republic"
+ UTU_fascism_ADJ:0 "Uturan"
+ UTU_democratic_ADJ:0 "Uturan"
+ UTU_neutrality_ADJ:0 "Uturan"
+ UTU_communism_ADJ:0 "Uturan"
+ SND_fascism:0 "Expansionist Sonduru"
+ SND_fascism_DEF:0 "Expansionist Sonduru"
+ SND_democratic:0 "Sonduru"
+ SND_democratic_DEF:0 "Sonduru"
+ SND_neutrality:0 "Sonduru"
+ SND_neutrality_DEF:0 "Sonduru"
+ SND_communism:0 "Sonduru Peoples' Republic"
+ SND_communism_DEF:0 "The Sonduru Peoples' Republic"
+ SND_fascism_ADJ:0 "Sonduran"
+ SND_democratic_ADJ:0 "Sonduran"
+ SND_neutrality_ADJ:0 "Sonduran"
+ SND_communism_ADJ:0 "Sonduran"
+ LSN_fascism:0 "Lasnova"
+ LSN_fascism_DEF:0 "Lasnova"
+ LSN_democratic:0 "Lasnova"
+ LSN_democratic_DEF:0 "Lasnova"
+ LSN_neutrality:0 "Lasnova"
+ LSN_neutrality_DEF:0 "Lasnova"
+ LSN_communism:0 "Lasnova Peoples' Republic"
+ LSN_communism_DEF:0 "The Lasnova Peoples' Republic"
+ LSN_fascism_ADJ:0 "Lasnovan"
+ LSN_democratic_ADJ:0 "Lasnovan"
+ LSN_neutrality_ADJ:0 "Lasnovan"
+ LSN_communism_ADJ:0 "Lasnovan"
+ RTR_fascism:0 "Artura"
+ RTR_fascism_DEF:0 "Artura"
+ RTR_democratic:0 "Artura"
+ RTR_democratic_DEF:0 "Artura"
+ RTR_neutrality:0 "Artura"
+ RTR_neutrality_DEF:0 "Artura"
+ RTR_communism:0 "Artura Peoples' Republic"
+ RTR_communism_DEF:0 "The Artura Peoples' Republic"
+ RTR_fascism_ADJ:0 "Arturan"
+ RTR_democratic_ADJ:0 "Arturan"
+ RTR_neutrality_ADJ:0 "Arturan"
+ RTR_communism_ADJ:0 "Arturan""
+ KBS_fascism:0 "Kobaulashlivi"
+ KBS_fascism_DEF:0 "Kobaulashlivi"
+ KBS_democratic:0 "Kobaulashlivi"
+ KBS_democratic_DEF:0 "Kobaulashlivi"
+ KBS_neutrality:0 "Kobaulashlivi"
+ KBS_neutrality_DEF:0 "Kobaulashlivi"
+ KBS_communism:0 "Kobaulashlivi Peoples' Republic"
+ KBS_communism_DEF:0 "The Kobaulashlivi Peoples' Republic"
+ KBS_fascism_ADJ:0 "Kobaulashlivian"
+ KBS_democratic_ADJ:0 "Kobaulashlivian"
+ KBS_neutrality_ADJ:0 "Kobaulashlivian"
+ KBS_communism_ADJ:0 "Kobaulashlivian"
+ AKM_fascism:0 "Akamatuli"
+ AKM_fascism_DEF:0 "Akamatuli"
+ AKM_democratic:0 "Akamatuli"
+ AKM_democratic_DEF:0 "Akamatuli"
+ AKM_neutrality:0 "Akamatuli"
+ AKM_neutrality_DEF:0 "Akamatuli"
+ AKM_communism:0 "Akamatuli Peoples' Republic"
+ AKM_communism_DEF:0 "The Akamatuli Peoples' Republic"
+ AKM_fascism_ADJ:0 "Akamatulian"
+ AKM_democratic_ADJ:0 "Akamatulian"
+ AKM_neutrality_ADJ:0 "Akamatulian"
+ AKM_communism_ADJ:0 "Akamatulian"
+ MCT_fascism:0 "Macehualuti"
+ MCT_fascism_DEF:0 "Macehualuti"
+ MCT_democratic:0 "Macehualuti"
+ MCT_democratic_DEF:0 "Macehualuti"
+ MCT_neutrality:0 "Macehualuti"
+ MCT_neutrality_DEF:0 "Macehualuti"
+ MCT_communism:0 "Macehualuti Peoples' Republic"
+ MCT_communism_DEF:0 "The Macehualuti Peoples' Republic"
+ MCT_fascism_ADJ:0 "Macehualute"
+ MCT_democratic_ADJ:0 "Macehualute"
+ MCT_neutrality_ADJ:0 "Macehualute"
+ MCT_communism_ADJ:0 "Macehualute"
+ FCT_fascism:0 "Free Cities"
+ FCT_fascism_DEF:0 "Free Cities"
+ FCT_democratic:0 "Free Cities"
+ FCT_democratic_DEF:0 "Free Cities"
+ FCT_neutrality:0 "Free Cities"
+ FCT_neutrality_DEF:0 "Free Cities"
+ FCT_communism:0 "Free Cities"
+ FCT_communism_DEF:0 "The Free Cities"
+ FCT_fascism_ADJ:0 "Freedonian"
+ FCT_democratic_ADJ:0 "Freedonian"
+ FCT_neutrality_ADJ:0 "Freedonian"
+ FCT_communism_ADJ:0 "Freedonian"
+ WRB_fascism:0 "Werreurbro"
+ WRB_fascism_DEF:0 "Werreurbro"
+ WRB_democratic:0 "Werreurbro"
+ WRB_democratic_DEF:0 "Werreurbro"
+ WRB_neutrality:0 "Werreurbro"
+ WRB_neutrality_DEF:0 "Werreurbro"
+ WRB_communism:0 "Werreurbro"
+ WRB_communism_DEF:0 "Werreurbro"
+ WRB_fascism_ADJ:0 "Werreurbran"
+ WRB_democratic_ADJ:0 "Werreurbran"
+ WRB_neutrality_ADJ:0 "Werreurbran"
+ WRB_communism_ADJ:0 "Werreurbran"
+ BLM_fascism:0 "British Lemuria"
+ BLM_fascism_DEF:0 "British Lemuria"
+ BLM_democratic:0 "British Lemuria"
+ BLM_democratic_DEF:0 "British Lemuria"
+ BLM_neutrality:0 "British Lemuria"
+ BLM_neutrality_DEF:0 "British Lemuria"
+ BLM_communism:0 "British Lemuria"
+ BLM_communism_DEF:0 "British Lemuria"
+ BLM_fascism_ADJ:0 "British Lemurian"
+ BLM_democratic_ADJ:0 "British Lemurian"
+ BLM_neutrality_ADJ:0 "British Lemurian"
+ BLM_communism_ADJ:0 "British Lemurian"
+ LKR_fascism:0 "Lankr"
+ LKR_fascism_DEF:0 "Lankr"
+ LKR_democratic:0 "Lankr"
+ LKR_democratic_DEF:0 "Lankr"
+ LKR_neutrality:0 "Lankr"
+ LKR_neutrality_DEF:0 "Lankr"
+ LKR_communism:0 "Lankr"
+ LKR_communism_DEF:0 "Lankr"
+ LKR_fascism_ADJ:0 "Lankrian"
+ LKR_democratic_ADJ:0 "Lankrian"
+ LKR_neutrality_ADJ:0 "Lankrian"
+ LKR_communism_ADJ:0 "Lankrian"
+ ARC_fascism:0 "Arcadia"
+ ARC_fascism_DEF:0 "Arcadia"
+ ARC_democratic:0 "Arcadia"
+ ARC_democratic_DEF:0 "Arcadia"
+ ARC_neutrality:0 "Arcadia"
+ ARC_neutrality_DEF:0 "Arcadia"
+ ARC_communism:0 "Arcadia"
+ ARC_communism_DEF:0 "Arcadia"
+ ARC_fascism_ADJ:0 "Arcadian"
+ ARC_democratic_ADJ:0 "Arcadian"
+ ARC_neutrality_ADJ:0 "Arcadian"
+ ARC_communism_ADJ:0 "Arcadian"
+ QLA_fascism:0 "Qlach"
+ QLA_fascism_DEF:0 "Qlach"
+ QLA_democratic:0 "Qlach"
+ QLA_democratic_DEF:0 "Qlach"
+ QLA_neutrality:0 "Qlach"
+ QLA_neutrality_DEF:0 "Qlach"
+ QLA_communism:0 "Qlach"
+ QLA_communism_DEF:0 "Qlach"
+ QLA_fascism_ADJ:0 "Qlachian"
+ QLA_democratic_ADJ:0 "Qlachian"
+ QLA_neutrality_ADJ:0 "Qlachian"
+ QLA_communism_ADJ:0 "Qlachian"
+ SSS_fascism:0 "Suisse"
+ SSS_fascism_DEF:0 "Suisse"
+ SSS_democratic:0 "Suisse"
+ SSS_democratic_DEF:0 "Suisse"
+ SSS_neutrality:0 "Suisse"
+ SSS_neutrality_DEF:0 "Suisse"
+ SSS_communism:0 "Suisse"
+ SSS_communism_DEF:0 "Suisse"
+ SSS_fascism_ADJ:0 "Suisse"
+ SSS_democratic_ADJ:0 "Suisse"
+ SSS_neutrality_ADJ:0 "Suisse"
+ SSS_communism_ADJ:0 "Suisse"
+ FLM_fascism:0 "Free Lemuria"
+ FLM_fascism_DEF:0 "Free Lemuria"
+ FLM_democratic:0 "Free Lemuria"
+ FLM_democratic_DEF:0 "Free Lemuria"
+ FLM_neutrality:0 "Free Lemuria"
+ FLM_neutrality_DEF:0 "Free Lemuria"
+ FLM_communism:0 "Free Lemuria"
+ FLM_communism_DEF:0 Free Lemuria"
+ FLM_fascism_ADJ:0 "Free Lemurian"
+ FLM_democratic_ADJ:0 "Free Lemurian"
+ FLM_neutrality_ADJ:0 "Free Lemurian"
+ FLM_communism_ADJ:0 "Free Lemurian"
+ WUL_fascism:0 "Workers Lemuria"
+ WUL_fascism_DEF:0 "Workers Lemuria"
+ WUL_democratic:0 "Workers Lemuria"
+ WUL_democratic_DEF:0 "Workers Lemuria"
+ WUL_neutrality:0 "Workers Lemuria"
+ WUL_neutrality_DEF:0 "Workers Lemuria"
+ WUL_communism:0 "Workers Lemuria"
+ WUL_communism_DEF:0 "Workers Lemuria"
+ WUL_fascism_ADJ:0 "Workers"
+ WUL_democratic_ADJ:0 "Workers"
+ WUL_neutrality_ADJ:0 "Workers"
+ WUL_communism_ADJ:0 "Workers"
+ FAN_fascism:0 "Free Anarchists"
+ FAN_fascism_DEF:0 "Free Anarchists"
+ FAN_democratic:0 "Free Anarchists"
+ FAN_democratic_DEF:0 "Free Anarchists"
+ FAN_neutrality:0 "Free Anarchists"
+ FAN_neutrality_DEF:0 "Free Anarchists"
+ FAN_communism:0 "Free Anarchists"
+ FAN_communism_DEF:0 "Free Anarchists"
+ FAN_fascism_ADJ:0 "Anarchist"
+ FAN_democratic_ADJ:0 "Anarchist"
+ FAN_neutrality_ADJ:0 "Anarchist"
+ FAN_communism_ADJ:0 "Anarchist"
+ AUD_fascism:0 "Audenshire"
+ AUD_fascism_DEF:0 "Audenshire"
+ AUD_democratic:0 "Audenshire"
+ AUD_democratic_DEF:0 "Audenshire"
+ AUD_neutrality:0 "Audenshire"
+ AUD_neutrality_DEF:0 "Audenshire"
+ AUD_communism:0 "Audenshire"
+ AUD_communism_DEF:0 "Audenshire"
+ AUD_fascism_ADJ:0 "Audenshiran"
+ AUD_democratic_ADJ:0 "Audenshiran"
+ AUD_neutrality_ADJ:0 "Audenshiran"
+ AUD_communism_ADJ:0 "Audenshiran"
+ KLK_fascism:0 "Kalari"
+ KLK_fascism_DEF:0 "Kalari"
+ KLK_democratic:0 "Kalari"
+ KLK_democratic_DEF:0 "Kalari"
+ KLK_neutrality:0 "Kalari"
+ KLK_neutrality_DEF:0 "Kalari"
+ KLK_communism:0 "Kalari"
+ KLK_communism_DEF:0 "Kalari"
+ KLK_fascism_ADJ:0 "Kalari"
+ KLK_democratic_ADJ:0 "Kalari"
+ KLK_neutrality_ADJ:0 "Kalari"
+ KLK_communism_ADJ:0 "Kalari"
  CAL_fascism:0 "Greater California"
  CAL_fascism_DEF:0 "Greater California"
  CAL_democratic:0 "California Republic"
