--- a/localisation/AML_strategic_region_names_l_english.yml
+++ b/localisation/AML_strategic_region_names_l_english.yml
@@ -210,7 +210,7 @@
  STRATEGICREGION_210:2 "Goprug Mountains"
  STRATEGICREGION_211:0 "Fa'efana Plains"
  STRATEGICREGION_212:0 "Silver Coast"
- STRATEGICREGION_213:0 "Coastal Baraga"
+ STRATEGICREGION_213:0 "Baragá"
  STRATEGICREGION_214:0 "Kanahe"
  STRATEGICREGION_215:0 "Todorovia"
  STRATEGICREGION_216:0 "Tahiti"
@@ -232,7 +232,7 @@
  STRATEGICREGION_232:0 "Lauwili"
  STRATEGICREGION_233:0 "Navganara Highlands"
  STRATEGICREGION_234:0 "Savaiki Peninsula"
- STRATEGICREGION_235:0 "Northern Heart of Maui"
+ STRATEGICREGION_235:0 "Heart of Maui"
  STRATEGICREGION_236:0 "Southern Heart of Maui"
  STRATEGICREGION_237:0 "Kakaha Peninsula"
  STRATEGICREGION_238:0 "West Sea"
