more minor changes

--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -961,8 +961,8 @@
  STATE_960:0 "Massachusetts"
  STATE_961:0 "Vermont"
  STATE_962:0 "Maine"
- STATE_963:0 "Vorea"
- STATE_964:0 "Zukustane"
+ STATE_963:0 "Ihntzanak"
+ STATE_964:0 "Sorgonak"
  STATE_965:0 "Latasmun"
  STATE_966:0 "Takamafrika"
  STATE_967:0 "Zenigal"
