--- a/localisation/AML_countries_l_english.yml
+++ b/localisation/AML_countries_l_english.yml
@@ -719,18 +719,18 @@
  WAP_democratic_ADJ:0 "Waponi"
  WAP_neutrality_ADJ:0 "Waponi"
  WAP_communism_ADJ:0 "Waponi"
- ZHE_fascism:0 "Zhenzhuren"
- ZHE_fascism_DEF:0 "The Zhenzhuren Union"
- ZHE_democratic:0 "Zhenzhuren"
- ZHE_democratic_DEF:0 "Zhenzhuren"
- ZHE_neutrality:0 "Zhenzhuren"
- ZHE_neutrality_DEF:0 "Zhenzhuren"
- ZHE_communism:0 "Socialist Republic of Zhenzhuren"
- ZHE_communism_DEF:0 "The Socialist Republic of Zhenzhuren"
- ZHE_fascism_ADJ:0 "Zhenzhurenese"
- ZHE_democratic_ADJ:0 "Zhenzhurenese"
- ZHE_neutrality_ADJ:0 "Zhenzhurenese"
- ZHE_communism_ADJ:0 "Zhenzhurenese"
+ TRS_fascism:0 "Trinsuyin"
+ TRS_fascism_DEF:0 "The Trinsuyin Union"
+ TRS_democratic:0 "Trinsuyin"
+ TRS_democratic_DEF:0 "Trinsuyin"
+ TRS_neutrality:0 "Trinsuyin"
+ TRS_neutrality_DEF:0 "Trinsuyin"
+ TRS_communism:0 "Socialist Republic of Trinsuyin"
+ TRS_communism_DEF:0 "The Socialist Republic of Trinsuyin"
+ TRS_fascism_ADJ:0 "Trinsuyinese"
+ TRS_democratic_ADJ:0 "Trinsuyinese"
+ TRS_neutrality_ADJ:0 "Trinsuyinese"
+ TRS_communism_ADJ:0 "Trinsuyinese"
  CHO_fascism:0 "Chola"
  CHO_fascism_DEF:0 "Chola"
  CHO_democratic:0 "Chola"
@@ -756,13 +756,13 @@
  HOU_neutrality_ADJ:0 "Houpo'ean"
  HOU_communism_ADJ:0 "Houpo'ean"
  MUU_fascism:0 "Greater Empire of Mu"
- MUU_fascism_DEF:0 "Muror"
+ MUU_fascism_DEF:0 "The Greater Empire of Mu"
  MUU_democratic:0 "Federal Republic of Mu"
- MUU_democratic_DEF:0 "Muror"
+ MUU_democratic_DEF:0 "The Federal Republic of Mu"
  MUU_neutrality:0 "Mu"
- MUU_neutrality_DEF:0 "Muror"
+ MUU_neutrality_DEF:0 "Mu"
  MUU_communism:0 "People's Federation of Mu"
- MUU_communism_DEF:0 "People's Federation of Mu"
+ MUU_communism_DEF:0 "The People's Federation of Mu"
  MUU_fascism_ADJ:0 "Muror"
  MUU_democratic_ADJ:0 "Muror"
  MUU_neutrality_ADJ:0 "Muror"
