--- a/localisation/aml_focus_l_english.yml
+++ b/localisation/aml_focus_l_english.yml
@@ -2280,8 +2280,8 @@
  sirte_oil_developed:0 "Sirte Oil Fields Developed"
  JAP_pacific_domination:1 "Pacific Domination"
  JAP_pacific_domination_desc:1 "If we look for resources, we should look no further than our own western pacific. The coastline of Mu is rich in valuable resources, and would provide us with a strategic control over the entire ocean. This region is imperative in allowing us to become the sole rulers of the west pacific."
- JAP_claim_zhenzuren:1 "Claim Zhenzuren"
- JAP_claim_zhenzuren_desc:1 "The nation of Zhenzuren is sure to ally with their Chinese brethren if pressured. We must take them out in one swift blow, to quickly secure their valuable ports and industry before their guns turn against us."
+ JAP_claim_trinsuyin:1 "Claim Trinsuyin"
+ JAP_claim_trinsuyin_desc:1 "The nation of Trinsuyin is sure to ally with their Chinese brethren if pressured. We must take them out in one swift blow, to quickly secure their valuable ports and industry before their guns turn against us."
  JAP_naval_invasion_tactics:1 "Naval Invasion Tactics"
  JAP_naval_invasion_tactics_desc:1 "Our vast holdings in the pacific allow us to strike anywhere in the east. But in order to utilize this capablity to its full potential, we need to have the means and training to carry out an effective naval invasion."
  JAP_polynesian_invasion:1 "War in Polynesia"
@@ -2443,8 +2443,8 @@
  TOD_reckoning_desc:1 "Now is the time to help our great nation understand the love and care that the Great Leader has for Todorovia!"
  JAP_pacific_domination:1 "Pacific Domination"
  JAP_pacific_domination_desc:1 "If we look for resources, we should look no further than our own Western Pacific. The coastline of Mu is rich in valuable resources, and would provide us with a strategic control over the entire ocean. This region is imperative in allowing us to become the sole rulers of the Western Pacific."
- JAP_claim_zhenzuren:1 "Claim Zhenzhuren"
- JAP_claim_zhenzuren_desc:1 "The nation of Zhenzhuren is sure to ally with their Chinese brethren if pressured. We must take them out in one swift blow, to quickly secure their valuable ports and industry before their guns turn against us."
+ JAP_claim_zhenzuren:1 "Claim Trinsuyin"
+ JAP_claim_zhenzuren_desc:1 "The nation of Trinsuyin is sure to ally with their Chinese brethren if pressured. We must take them out in one swift blow, to quickly secure their valuable ports and industry before their guns turn against us."
  JAP_naval_invasion_tactics:1 "Naval Invasion Tactics"
  JAP_naval_invasion_tactics_desc:1 "Our vast holdings in the Pacific allow us to strike anywhere in the east. But in order to utilize this capablity to its full potential, we need to have the means and training to carry out an effective naval invasion."
  JAP_polynesian_invasion:1 "War in the Pacific"
