--- a/localisation/loading_tips_l_english.yml
+++ b/localisation/loading_tips_l_english.yml
@@ -90,7 +90,7 @@
  LOADING_TIP_88:0 ""You drive tanks down the streets, and then expect us to believe you when you call for peace?"\n - Fijnland's Prime Minister, Willem van den Bergh"
  LOADING_TIP_89:0 ""Vorwärts! Vorwärts und steche ihnen in die Augen!"\n - Heinrich Schmidt, F.S.M. Freikorps."
  LOADING_TIP_90:0 ""You can live your life as a coward, or you die as a hero!"\n - General Dajjar Zohok addressing his troops a moment before an enemy bullet killed him."
- LOADING_TIP_91:0 ""One dishonor heaped upon another. The heavenly mandate has departed and left us desolate."\n - Yang Xinyi Luo addressing the Zhenzhuren Parliament before committing suicide."
+ LOADING_TIP_91:0 ""One dishonor heaped upon another. The heavenly mandate has departed and left us desolate."\n - Yang Xinyi Luo addressing the Trinsuyin Parliament before committing suicide."
  LOADING_TIP_91:0 ""I know my rights, namely that I have none, and therefore nothing to lose."\n - Sumukivi Aepa’ato"
  LOADING_TIP_92:0 ""Praise the Lord and pass the ammunition!"\n - Chaplain Forgy, USS New Orleans"
  LOADING_TIP_93:0 ""If fighting is sure to result in victory, then you must fight!"\n - Sun Tzu said that."
