--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -790,23 +790,23 @@
  STATE_789:0 "Pantiya-Kobaulashlivi Strip"
  STATE_790:0 "Dutch Chola"
  STATE_791:0 "Macehualuti"
- STATE_792:0 "Dryang"
- STATE_793:0 "Nups"
- STATE_794:0 "Hanyen"
+ STATE_792:0 "Dom Henrique Islands"
+ STATE_793:0 "Dangleng"
+ STATE_794:0 "West Tangwan"
  STATE_795:0 "Kobaulashlivi"
  STATE_796:0 "Pantiya 2"
- STATE_797:0 "Kruyung"
+ STATE_797:0 "East Tangwan"
  STATE_798:0 "Kumari 2"
- STATE_799:0 "Manji"
+ STATE_799:0 "Dulgwa Mabong"
  STATE_800:0 "Sonduru"
  STATE_801:0 "Pantiya 3"
  STATE_802:0 "Kumari 3"
- STATE_803:0 "Grao"
+ STATE_803:0 "Qazeni"
  STATE_804:0 "Pantiya 1"
  STATE_805:0 "Portuguese Utura"
- STATE_806:0 "Shu"
+ STATE_806:0 "Nulang"
  STATE_807:0 "Utura"
- STATE_808:0 "Myeng"
+ STATE_808:0 "Rengtsiu"
  STATE_809:0 "Chola"
  STATE_810:0 "Va'asi"
  STATE_811:0 "Anaga'a"
@@ -936,7 +936,7 @@
  STATE_935:0 "Südwüstenland"
  STATE_936:0 "Nordwüstenland"
  STATE_937:0 "Nybornholm"
- STATE_938:0 "Nuyu"
+ STATE_938:0 "Qelau"
  STATE_939:0 "South Tesi"
  STATE_940:0 "Antillia"
  STATE_941:0 "Thule"
