--- a/localisation/AML_events_l_english.yml
+++ b/localisation/AML_events_l_english.yml
@@ -3179,10 +3179,10 @@
  usa.401.t:0 "[From.GetNameDefCap] accepts Destroyers for Bases Agreement"
  usa.401.desc:0 "British Prime Minister [From.GetLeader] has signalled his acceptance of the terms of the Destroyers for Bases Agreement. A group of [From.GetAdjective] naval officers has arrived to inspect the destroyers and oversee the transfer.\n\n There is evidently still some work to do as several [From.GetAdjective] officers seem a little concerned about the sheer amount and thickness of guano and rust on the ships to be transfered."
  usa.401.a:0 "Beggars can't be choosers."
- zhenzuren.1.t:0 "China Is Under Attack"
- zhenzuren.1.d:0 "Ever since the fall of the Qing dynasty, we have been fully independent from China. Our interests have remained focused our nation instead of the mainland. But as the beast that is Japan rears it's head, we find ourselves facing a common foe with our brethren. The KMT government has reach out to us, and proposes an alliance in order to protect both our nations from the Japanese threat."
- zhenzuren.1.a:0 "They need us, and we need them."
- zhenzuren.1.b:0 "Let them tear eachother apart."
+ trinsuyin.1.t:0 "China Is Under Attack"
+ trinsuyin.1.d:0 "Ever since the fall of the Qing dynasty, we have been fully independent from China. Our interests have remained focused our nation instead of the mainland. But as the beast that is Japan rears it's head, we find ourselves facing a common foe with our brethren. The KMT government has reach out to us, and proposes an alliance in order to protect both our nations from the Japanese threat."
+ trinsuyin.1.a:0 "They need us, and we need them."
+ trinsuyin.1.b:0 "Let them tear eachother apart."
  geq.1.t:0 "The Empire of Mu demands our lands"
  geq.1.d:0 "The Empire of Mu demands the states of Navjijeq, Navdrmu and, Navganara."
  geq.1.a:0 "Vashparaq shall forever remain independent!"
