provinces etc overhaul

--- a/localisation/AML_state_names_l_english.yml
+++ b/localisation/AML_state_names_l_english.yml
@@ -163,20 +163,20 @@
  STATE_162:0 "Tuscany"
  STATE_163:0 "Zara"
  STATE_164:0 "Dodecanese"
- STATE_165:0 "Catalonia"
- STATE_166:0 "Aragon"
+ STATE_165:1 "Cataluña"
+ STATE_166:1 "Western Aragón"
  STATE_167:0 "Valencia"
  STATE_168:0 "Murcia"
- STATE_169:0 "Andalusia"
+ STATE_169:1 "Sevilla"
  STATE_170:0 "Extremadura"
  STATE_171:0 "Galicia"
- STATE_172:0 "Navarre"
- STATE_173:0 "Granada"
- STATE_174:0 "Leon"
- STATE_175:0 "La Mancha"
- STATE_176:0 "Castille"
- STATE_177:0 "Balearic Islands"
- STATE_178:0 "Canary islands"
+ STATE_172:1 "Navarra"
+ STATE_173:1 "Granada"
+ STATE_174:1 "León"
+ STATE_175:1 "Ciudad Real"
+ STATE_176:1 "Burgos"
+ STATE_177:1 "Islas Baleares"
+ STATE_178:1 "Islas Canarias"
  STATE_179:0 "Beja"
  STATE_180:0 "Porto"
  STATE_181:0 "Guarda"
@@ -538,7 +538,7 @@
  STATE_537:0 "South Sakhalin"
  STATE_538:0 "Central Congo"
  STATE_539:0 "Gabon"
- STATE_540:0 "Angola"
+ STATE_540:1 "South Angola"
  STATE_541:0 "South West Africa"
  STATE_542:0 "Bechuanaland"
  STATE_543:0 "Madagascar"
@@ -622,7 +622,7 @@
  STATE_621:0 "Suiyuan"
  STATE_622:0 "Shaanxi"
  STATE_623:0 "Luzon"
- STATE_624:0 "Central islands"
+ STATE_624:0 "Central Islands"
  STATE_625:0 "Samar"
  STATE_626:0 "Palawan"
  STATE_627:0 "Mindanao"
@@ -786,15 +786,15 @@
  STATE_785:0 "Picardy"
  STATE_786:0 "Mauritanian Desert"
  STATE_787:0 "Northern Kashmir"
- STATE_788:0 "Kumari 1"
- STATE_789:0 "Pantiya-Kobaulashlivi Strip"
- STATE_790:0 "Dutch Chola"
- STATE_791:0 "Macehualuti"
- STATE_792:0 "Dom Henrique Islands"
- STATE_793:0 "Dangleng"
- STATE_794:0 "West Tangwan"
- STATE_795:0 "Kobaulashlivi"
- STATE_796:0 "Pantiya 2"
+ STATE_788:0 "Salamanca"
+ STATE_789:0 "Córdoba"
+ STATE_790:0 "Asturias"
+ STATE_791:0 "Valladolid"
+ STATE_792:0 "País Vasco"
+ STATE_793:0 "Guadalajara"
+ STATE_794:0 "Eastern Aragón"
+ STATE_795:0 "Santarém"
+ STATE_796:0 "North Angola"
  STATE_797:0 "East Tangwan"
  STATE_798:0 "Kumari 2"
  STATE_799:0 "Dulgwa Mabong"
@@ -989,7 +989,12 @@
  STATE_988:0 "Ackerson Desert"
  STATE_989:0 "East B. Lemuria"
  STATE_990:0 "Southern Coast"
- 
- 
- 
- 
+ STATE_991:0 "Kumari 1"
+ STATE_992:0 "Pantiya-Kobaulashlivi Strip"
+ STATE_993:0 "Dutch Chola"
+ STATE_994:0 "Macehualuti"
+ STATE_995:0 "Dom Henrique Islands"
+ STATE_996:0 "Dangleng"
+ STATE_997:0 "West Tangwan"
+ STATE_998:0 "Kobaulashlivi"
+ STATE_999:0 "Pantiya 2"
