--- a/localisation/AML_decisions_l_english.yml
+++ b/localisation/AML_decisions_l_english.yml
@@ -4,22 +4,18 @@
  support_tahiti_com1:0 "Support the Communist Forces with Manpower"
  support_tahiti_dem2:0 "Support the Democratic Forces with Guns"
  support_tahiti_com2:0 "Support the Communist Forces with Guns"
- 
  USA_war_plan_cyan:0 "War Plan Cyan"
  USA_war_plan_cyan_desc:0 "Because of our prior shared love of democracy we have been patient and lenient with Atlantis, but they have demonstrated that they are willing to make themselves our enemies. We must swiftly eliminate them as a threat."
  USA_execute_war_plan_cyan:1 "Execute War Plan Cyan"
- 
  develop_mauruuru_bauxite_deposits:0 "Develop Bauxite Deposits in Mauruuru"
  develop_mauruuru_chromium_deposits:0 "Develop Chromium Deposits in Mauruuru"
  develop_unjarki_industrial_district:0 "Develop the Industrial District of Unjarki"
  develop_unjarki_steel_refineries:0 "Develop the Steel Refineries of Unjarki"
  develop_geq_iron_deposits:0 "Develop Iron Deposits in Geq"
- 
  develop_goprug_bauxite_deposits:0 "Develop Bauxite Deposits in Goprug"
  develop_goprug_iron_deposits:0 "Develop Iron Deposits in Goprug"
  develop_tlaqua_industrial_district:0 "Build a Mining Complex in Tlaqua"
  develop_tlaqua_refineries:0 "Expand Mining Infrastructure in Tlaqua"
- 
  develop_lezam_bauxite_deposits:0 "Develop Bauxite Deposits in Lezam"
  develop_houkehaka_industrial_district:0 "Develop the Industrial District of Houkehaka"
  develop_houkehaka_refineries:0 "Develop the Refineries of Houkehaka"
@@ -35,24 +31,18 @@
  further_develop_tiare_plantations:0 "Further Develop the Plantations of Tiare"
  develop_rahi_plantations:0 "Develop Rubber Plantations in Rahi"
  further_develop_rahi_plantations:0 "Further Develop the Plantations of Rahi"
- 
  develop_karlswald_bauxite_deposits:0 "Develop Bauxite Deposits in Karlswald"
  develop_petersstrand_iron_deposits:0 "Develop Iron Deposits in Petersstrand"
  develop_blaueswasserstaat_iron_deposits:0 "Develop Iron Deposits in Blaueswasserstaat"
- 
  develop_pohe_iron_deposits:0 "Develop Iron Deposits in Pohe"
  develop_taere_tungsten_plants:0 "Develop Tungsten Deposits in Taere"
  develop_taere_rubber_farms:0 "Develop Rubber Farms in Koe"
- 
  develop_navganara_industrial_district:0 "Build a Mining Complex in Navganara"
  develop_navganara_refineries:0 "Expand Mining Infrastructure in Pohe"
- 
  develop_williamskust_tungsten_plants:0 "Develop Tungsten Deposits in Williamskust"
  develop_oranjehaven_steel_refineries:0 "Develop Steel Refineries in Oranjehaven"
- 
  develop_houavae_iron_deposits:0 "Develop Iron Deposits in Hou'avae"
  develop_kaniwha_rubber_farms:0 "Develop Rubber Farms in Kaniwha"
- 
  develop_minasdoimperador_aluminium_plants:0 "Develop Aluminium Refineries in Minas do Imperador"
  develop_lauwili_oil_plants:0 "Develop Oil Extraction Plants in Lauwili"
  develop_purumu_oil_plants:0 "Develop Oil Extraction Plants in Purumu"
@@ -62,9 +52,8 @@
  develop_mapotoufu_steel_refineries:0 "Develop Steel Refineries in Mápó Tòufu"
  develop_qitiankang_steel_refineries:0 "Develop Steel Refineries in Qītiān Káng"
  develop_vogelinsel_chromium_deposits:0 "Develop Chromium Deposits in Vogelinsel"
- 
  MNU_fascist_uprising:0 "Coup the Administration"
- MNU_fascist_uprising_desc:0 "Saxonia Austral was a settlement formed on ideals of strength and independence. We will not let the puppet regime of the FSM rule us any longer. ++++note to self add more+++"
+ MNU_fascist_uprising_desc:0 "Saxonia Austral was a settlement formed on ideals of strength and independence. We will not let the puppet regime of the FMU rule us any longer. ++++note to self add more+++"
  GEQ_fascist_coring:0 "Core Territory"
  GEQ_fascist_coring_desc:0 "We will send in people and resources to core our territory."
  GEQ_core_vashparaq:0 "Core Vashparaq"
@@ -77,7 +66,6 @@
  GEQ_core_NHI_desc:0 "We will send in people and resources to core New Hibernia."
  GEQ_core_the_lezam_hills:0 "Core the Lezam Hills"
  GEQ_core_the_lezam_hills_desc:0 "We will send in people and resources to core the Lezam Hills."
-
  form_naf:0 "Proclaim the North Atlantic Federation"
  form_naf_category:0 "Proclaim the North Atlantic Federation"
  form_country_thule_required_states_tt:0 "Controls Thule."
