--- a/localisation/AML_loading_tips_l_english.yml
+++ b/localisation/AML_loading_tips_l_english.yml
@@ -93,3 +93,12 @@
  LOADING_TIP_91:0 ""One dishonor heaped upon another. The heavenly mandate has departed and left us desolate."\n - Yang Xinyi Luo addressing the Trinsuyin Parliament before committing suicide."
  LOADING_TIP_91:0 ""I know my rights, namely that I have none, and therefore nothing to lose."\n - Sumukivi Aepa’ato"
  LOADING_TIP_92:0 ""Praise the Lord and pass the ammunition!"\n - Chaplain Forgy, USS New Orleans"
+ LOADING_TIP_93:0 ""If fighting is sure to result in victory, then you must fight!"\n - Sun Tzu said that."
+ LOADING_TIP_94:0 ""No three things are as sure as French spirit, Atlantean cunningness, and American unpredicatablity."\n - General Miles Dempsey"
+ LOADING_TIP_95:0 ""For crying out loud, how I wish sometimes that my own men could be the ones at the end of my barrel"\n - PLACEHOLDER GENERAL IFEWJOGIWGJOIRJOGJIRE"
+ LOADING_TIP_96:0 ""Crash and burn, at least in the first months of the war. I'm prepared to admit our tactics are inferior, but we shall catch up in no time."\n - Avaskanta Carras"
+ LOADING_TIP_97:0 ""Knives are eating utensils, but only until a fight breaks out at the table."\n - Old Atlantean proverb." - Ion Antonescu"
+ LOADING_TIP_98:0 ""In wartime, truth is so precious that she should always be attended by a bodyguard of lies."\n - Winston Churchill"
+ LOADING_TIP_99:0 ""Vanquished today by mechanical force, in the future we will be able to overcome by a superior mechanical force. The fate of the world depends on it."\n - Charles de Gaulle"
+ LOADING_TIP_100:0 "The long sobs of violins of autumn. Soothe my heart with a monotone languor.\n - SOE coded transmission to French resistance"
+ LOADING_TIP_101:0 "A State like Switzerland, which is nothing but a pimple on the face of Europe, cannot be allowed to continue.\n- Adolf Hitler"
