--- a/localisation/AML_province_names_l_english.yml
+++ b/localisation/AML_province_names_l_english.yml
@@ -14,7 +14,7 @@
  middle_east:0 "Middle East"
  middle_east_adj:0 "Middle Eastern"
  mu:0 "Mu"
- mu_adj:0 "Muror"
+ mu_adj:0 "Muan"
  atlantis:0 "Atlantis"
  atlantis_adj:0 "Atlantean"
  lemuria:0 "Lemuria"
