--- a/localisation/AML_strategic_region_names_l_english.yml
+++ b/localisation/AML_strategic_region_names_l_english.yml
@@ -13,6 +13,7 @@
  STRATEGICREGION_12:0 "Northern Scandinavia"
  STRATEGICREGION_13:0 "Finland"
  STRATEGICREGION_14:0 "Trans-Urals"
+ STRATEGICREGION_15:0 "Trans-Urals"
  STRATEGICREGION_16:0 "North Sea"
  STRATEGICREGION_17:0 "East Africa"
  STRATEGICREGION_18:0 "English Channel"
@@ -38,7 +39,7 @@
  STRATEGICREGION_38:0 "Western Poland"
  STRATEGICREGION_39:0 "Eastern Poland"
  STRATEGICREGION_40:1 "Transvolga"
- STRATEGICREGION_41:1 "Iberian Region"
+ STRATEGICREGION_41:1 "Northeastern Iberia"
  STRATEGICREGION_42:0 "Bay of Biscay"
  STRATEGICREGION_43:0 "Western Approaches"
  STRATEGICREGION_44:0 "Denmark Strait"
@@ -48,7 +49,7 @@
  STRATEGICREGION_48:0 "African Coast"
  STRATEGICREGION_49:0 "North Atlantic Ridge"
  STRATEGICREGION_50:0 "Labrador Sea"
- STRATEGICREGION_51:0 "Mid Atlantic gap"
+ STRATEGICREGION_51:0 "Mid Atlantic Gap"
  STRATEGICREGION_52:0 "Gulf of Mexico"
  STRATEGICREGION_53:0 "Caribbean Sea"
  STRATEGICREGION_54:0 "Eastern Seaboard"
@@ -104,7 +105,7 @@
  STRATEGICREGION_104:0 "Arabian Sea"
  STRATEGICREGION_105:1 "Hawaii Ridge"
  STRATEGICREGION_106:0 "Mexican Coast"
- STRATEGICREGION_107:0 "Western Canal zone"
+ STRATEGICREGION_107:0 "Western Canal Zone"
  STRATEGICREGION_108:0 "South American coast"
  STRATEGICREGION_109:0 "Peruvian Coast"
  STRATEGICREGION_110:0 "East Pacific Rise"
@@ -126,7 +127,7 @@
  STRATEGICREGION_126:0 "North Africa"
  STRATEGICREGION_127:0 "Sahara Desert"
  STRATEGICREGION_128:0 "Egypt"
- STRATEGICREGION_129:0 "Asia minor"
+ STRATEGICREGION_129:0 "Asia Minor"
  STRATEGICREGION_130:0 "Ukraine"
  STRATEGICREGION_131:0 "Belarus"
  STRATEGICREGION_132:0 "Northern Front"
@@ -205,9 +206,9 @@
  STRATEGICREGION_205:0 "Yucatan Peninsula"
  STRATEGICREGION_206:0 "Lower Baltic Sea"
  STRATEGICREGION_207:0 "Danish Belts"
- STRATEGICREGION_208:1 "Great Mu Desert"
- STRATEGICREGION_209:1 "Manu Peninsula"
- STRATEGICREGION_210:2 "Goprug Mountains"
+ STRATEGICREGION_208:0 "Western France"
+ STRATEGICREGION_209:0 "Northwestern Iberia"
+ STRATEGICREGION_210:0 "Southern Iberia"
  STRATEGICREGION_211:0 "Fa'efana Plains"
  STRATEGICREGION_212:0 "Silver Coast"
  STRATEGICREGION_213:0 "Baragá"
@@ -243,3 +244,6 @@
  STRATEGICREGION_243:0 "California Island"
  STRATEGICREGION_244:0 "Cascadia"
  STRATEGICREGION_245:0 "Atlantis"
+ STRATEGICREGION_246:1 "Great Mu Desert"
+ STRATEGICREGION_247:1 "Manu Peninsula"
+ STRATEGICREGION_248:2 "Goprug Mountains"
