--- a/localisation/AML_victory_points_l_english.yml
+++ b/localisation/AML_victory_points_l_english.yml
@@ -116,12 +116,12 @@
  VICTORY_POINTS_9764:0 "Barcelona"
  VICTORY_POINTS_740:0 "Bilbao"
  VICTORY_POINTS_758:1 "La Coruña"
- VICTORY_POINTS_875:0 "Cordoba"
+ VICTORY_POINTS_875:1 "Córdoba"
  VICTORY_POINTS_885:0 "Burgos"
  VICTORY_POINTS_3816:0 "Zaragoza"
  VICTORY_POINTS_6906:0 "Valencia"
  VICTORY_POINTS_7183:0 "Sevilla"
- VICTORY_POINTS_9979:0 "Malaga"
+ VICTORY_POINTS_9979:1 "Málaga"
  VICTORY_POINTS_10024:0 "Murcia"
  VICTORY_POINTS_11707:0 "Oviedo"
  VICTORY_POINTS_11825:0 "Valladolid"
@@ -354,7 +354,7 @@
  VICTORY_POINTS_10337:0 "Houston"
  VICTORY_POINTS_788:0 "Norfolk"
  VICTORY_POINTS_853:0 "Phoenix"
- VICTORY_POINTS_7517:0 "San Diego"
+ VICTORY_POINTS_1562:0 "San Diego"
  VICTORY_POINTS_1595:0 "Indianapolis"
  VICTORY_POINTS_1690:0 "Spokane"
  VICTORY_POINTS_1747:0 "Rapid City"
@@ -532,7 +532,7 @@
  VICTORY_POINTS_8252:0 "Guayaquil"
  VICTORY_POINTS_9108:0 "Luleå"
  VICTORY_POINTS_9458:0 "Portsmouth"
- VICTORY_POINTS_9832:0 "Hartford"
+ VICTORY_POINTS_9832:0 "Providence"
  VICTORY_POINTS_9907:0 "Florence"
  VICTORY_POINTS_9945:1 "Ceuta"
  VICTORY_POINTS_9974:0 "Ningbo"
@@ -578,7 +578,7 @@
  VICTORY_POINTS_12715:0 "Mérida"
  VICTORY_POINTS_4904:0 "Campeche"
  VICTORY_POINTS_1900:0 "Tuxtla Gutiérrez"
- VICTORY_POINTS_1562:0 "Tijuana"
+ VICTORY_POINTS_12461:0 "Tijuana"
  VICTORY_POINTS_10769:0 "Reynosa"
  VICTORY_POINTS_5015:0 "Matamoros"
  VICTORY_POINTS_10889:0 "Coatzacoalcos"
@@ -791,7 +791,7 @@
  VICTORY_POINTS_4975:0 "Albuquerque"
  VICTORY_POINTS_4740:0 "Wichita"
  VICTORY_POINTS_7834:0 "Topeka"
- VICTORY_POINTS_10556:0 "Boise"
+ VICTORY_POINTS_9616:0 "Boise"
  VICTORY_POINTS_9515:0 "Regensburg"
  VICTORY_POINTS_11234:0 "Velikiye Luki"
  VICTORY_POINTS_9098:0 "Luga"
@@ -819,7 +819,7 @@
  VICTORY_POINTS_9663:0 "Sochi"
  VICTORY_POINTS_719:0 "Novorossiysk"
  VICTORY_POINTS_487:0 "Mikhaylovka"
- VICTORY_POINTS_747:0 "Almería"
+ VICTORY_POINTS_12038:0 "Almería"
  VICTORY_POINTS_1176:0 "Granada"
  VICTORY_POINTS_6902:0 "Badajoz"
  VICTORY_POINTS_3874:0 "Salamanca"
@@ -891,6 +891,14 @@
  VICTORY_POINTS_7005:0 "Gabès"
  VICTORY_POINTS_3560:0 "Sedan"
  VICTORY_POINTS_1208:0 "Kuching"
+ VICTORY_POINTS_726:0 "León"
+ VICTORY_POINTS_3933:0 "Pamplona"
+ VICTORY_POINTS_3954:0 "Caspe"
+ VICTORY_POINTS_12857:0 "Sidi Ifni"
+ VICTORY_POINTS_924:0 "Santarém"
+ VICTORY_POINTS_6933:0 "Beja"
+ VICTORY_POINTS_970:0 "Setúbal"
+ VICTORY_POINTS_2115:0 "Namibe"
  VICTORY_POINTS_13266:0 "Mápó Tòufu"
  VICTORY_POINTS_13264:0 "Lú Dáqèn"
  VICTORY_POINTS_13263:0 "Chén Báo Tàn"
