divided up the supply areas

--- a/localisation/replace/AML_focus_l_english.yml
+++ b/localisation/replace/AML_focus_l_english.yml
@@ -159,3 +159,24 @@
  TOD_greatpatrioticspeech_desc:1 "Our Great Leader has decided to unite the nation and to put down dissension once and for all by addressing the people. We must arrange for him to be heard by radio in every schoolhouse, church, market, government building, or place of assembly."
  TOD_reckoning:1 "The Reckoning"
  TOD_reckoning_desc:1 "Now is the time to help our great nation understand the love and care that the Great Leader has for Todorovia!"
+ TOD_center_of_the_world: "Center of the World"
+ TOD_fed_tod_soc_states:1 "Federated Todorovian Socialist States"
+ tod_national_arms:1 "Todorovian National Arms"
+ diego_and_diego:1 "Armas D&D"
+ pablo_y_diazabal:1 "Pablo y Diazabal"
+ tanques_tanques:1 "Armadura Nacional"
+ TOD_national_yards:1 "Todorovian National Yards"
+ austral_shipyards:1 "Austral Shipyards"
+ t_m_e:1 "Navios T.M.E."
+ armas_navales:1 "Armas Navales"
+ tod_aguila:1 "Aviones Aguila"
+ ad_astra:1 "Ad Astra"
+ per_portam:1 "Armas Querubín"
+ santander:1 "Santander"
+ enaltecido:1 "Enaltecido"
+ mfg_generico:1 "Perez y Ortolí"
+ mfg_generico2:1 "Vellez y Dolo"
+ mfg_generico3:1 "Poje Manufacturing"
+ tod_national_oil:1 "Todorovian National Oil"
+ maquinas_de_todorovia:1 "Maquinas Todorovia"
+ industria_coral:1 "Industria Coral"
