cutting out copied localisations/loc fixes

--- a/localisation/replace/AML_ideas_l_english.yml
+++ b/localisation/replace/AML_ideas_l_english.yml
@@ -28,7 +28,7 @@
  FSM_laimaria_unismitri:0 "Emil Rosenholz"
  FSM_damaskinos:0 "Andreas Hollenhörz"
  FSM_georgios_papandreou:0 "Gunter Schwarzdorn"
- FSM_damaskinos:0 "Rudi Koloniemann"
+ FSM_damaskinos1:0 "Rudi Koloniemann"
  FSM_evripidis_bakirtris:0 "Dolf Schmutz"
  FSM_nikolaos_plastiras:0 "Ludwig Hennerman"
  FSM_eleftherios_venizelos:0 "Rollo Lutz"
@@ -49,7 +49,7 @@
  laimaria_unismitri:0 "Laimaria Unismitri"
  ATL_damaskinos:0 "Moristusis Animosto"
  ATL_georgios_papandreou:0 "Noromu Tiudu"
- ATL_damaskinos:0 "Restidi Omostiru"
+ ATL_damaskinos1:0 "Restidi Omostiru"
  ATL_evripidis_bakirtris:0 "Eukisto Busissni"
  ATL_nikolaos_plastiras:0 "Daudis Gusisid"
  ATL_eleftherios_venizelos:0 "Usimi Durimssi"
@@ -391,7 +391,6 @@
  carlo_bergamini:0 "Carlo Bergamini"
  luigi_mascherpa:0 "Luigi Mascherpa"
  tomoyuki_yamashita:0 "Tomoyuki Yamashita"
- hisaichi_terauchi:0 "Hisaichi Terauchi"
  isoroku_yamamoto:0 "Isoroku Yamamoto"
  minoru_genda:0 "Minoru Genda"
  yoshitoshi_tokugawa:0 "Yoshitoshi Tokugawa"
@@ -565,7 +564,6 @@
  POL_stocznia_gdynia:0 "Stocznia Gdynia"
  casa:0 "CASA"
  secn:0 "SECN"
- camco:0 "CAMCO"
  jiangnan_shipyard_group:0 "Jiangnan Shipyard Group"
  mw_aircraft:0 "M.W. Aircraft"
  iar:0 "IAR"
@@ -593,7 +591,6 @@
  zmaj:0 "Zmaj"
  zastava_arms:0 "Zastava Arms"
  artillerie_inrichtingen:0 "A. I. Hembrug"
- fokker:0 "Fokker"
  hih_siderius:0 "HIH Siderius"
  koolhoven:0 "Koolhoven"
  nsm_amsterdam:0 "NSM Amsterdam"
@@ -601,7 +598,6 @@
  golcuk_nsy:0 "Gölcük NSY"
  thk:0 "THK"
  ktf:0 "KTF"
- istanbul_military_industries:0 "Istanbul Military Industries"
  royal_hellenic_naval_shipyard:0 "Royal Hellenic Naval Shipyard"
  gnaf:0 "GNAF"
  horten_naval_yard:0 "Horten Naval Yard"
@@ -780,7 +776,6 @@
  POL_ludomil_rayski:0 "Ludomił Rayski"
  POL_josef_unrug:0 "Józef Unrug"
  POL_xawery_czernicki:0 "Xawery Czernicki"
- POL_zygmunt_buhusz_szysko:0 "Zygmunt Bohusz-Szyszko"
  POL_stanislav_maczek:0 "Stanisław Maczek"
  HUN_generic_fascist_demagogue:0 "Gyula Gömbös de Jakfa"
  HUN_generic_democratic_reformer:0 "József Széll"
@@ -976,7 +971,6 @@
  NOR_generic_democratic_reformer:0 "Haakon Lie"
  NOR_generic_communist_revolutionary:0 "Henry Wilhelm Kristiansen"
  NOR_halvdan_koht:0 "Halvdan Koht"
- NOR_adolf_indrebo:0 "Adolf Indrebø"
  NOR_trygve_halvdan_lie:0 "Trygve Halvdan Lie"
  NOR_alfred_roscher-lund:0 "Alfred Roscher-Lund"
  NOR_konrad_sundlo:0 "Konrad Sundlo"
@@ -1064,7 +1058,6 @@
  POR_jose_adriano_rebelo_pequito:0 "José Adriano Rebelo Pequito"
  POR_jose_norton_de_matos:0 "José Norton de Matos"
  POR_jose_filipe_rodrigues_de_barros:0 "José Filipe Rodrigues de Barros"
- CAN_chuck_crate:0 "Chuck Crate"
  CAN_robert_manion:0 "Robert Manion"
  CAN_william_kashtan:0 "William Kashtan"
  CAN_harry_crerar:0 "Harry Crerar"
@@ -1246,7 +1239,6 @@
  DEN_generic_communist_revolutionary:0 "Ib Nørlund"
  DEN_viggo_kampman:0 "Viggo Kampmann"
  DEN_ejnar_warum:0 "Ejnar Wærum"
- DEN_knud_kristensen:0 "Knud Kristensen"
  DEN_hans_a_rolsted:0 "Hans A. Rolsted"
  DEN_christian_frederik_von_schalburg:0 "Christian Frederik von Schalburg"
  DEN_hjalmar_rechnitzer:0 "Hjalmar Rechnitzer"
@@ -1400,7 +1392,6 @@
  AFG_azam_ataullah:0 "Azam Ataullah"
  AFG_aalem_daana:0 "Aalem Daana"
  AFG_hares_muzafar:0 "Hares Muzafar"
- AFG_asadullah_seraj_khan:0 "Asadullah Seraj Khan"
  AFG_wazir_akbar_khan:0 "Wazir Akbar Khan"
  AFG_ali_muhammed_khan:0 "Ali Muhammed Khan"
  AFG_gholam_wali:0 "Gholam Wali"
@@ -1439,7 +1430,6 @@
  BRA_aristides_guilhem:0 "Aristides Guilhem"
  BRA_jorge_martins:0 "Jorge Martins"
  BRA_floriano_peixoto:0 "Floriano Peixoto"
- BRA_epaminondas_dos_santos:0 "Epaminondas dos Santos"
  BRA_agliberto_vieira:0 "Agliberto Vieira"
  BRA_artur_da_costa_e_silva:0 "Artur da Costa é Silva"
  BRA_moreira_lima:0 "Moreira Lima"
@@ -1464,7 +1454,6 @@
  CHL_dario_cellejas_rojas:0 "Dario Cellejas Rojas"
  CHL_ariosto_herrera:0 "Ariosto Herrera"
  COL_generic_fascist_demagogue:0 "Julio Valdez"
- COL_generic_democratic_reformer:0 "Ulpiano Rengifo Cárdenas"
  COL_generic_communist_revolutionary:0 "Leon de Greiff"
  COL_raphael_hollmann:0 "Raphael Hollmann"
  COL_jose_ellis_quinsado:0 "José Ellis Quinsado"
@@ -1849,7 +1838,6 @@
  NZL_n_weir:0 "N. Weir"
  NZL_a_j_stallworthy:0 "A.J. Stallworthy"
  NZL_l_p_peterson:0 "L.P. Peterson"
- NZL_h_e_horan:0 "H.E. Horan"
  NZL_w_h_stratton:0 "W.H.Stratton"
  NZL_eric_prendergast:0 "Eric Prendergast"
  NZL_stomp_out_pacifism:0 "Stomp Out Pacifism"
@@ -2025,7 +2013,6 @@
  URG_horacio_arredondo:0 "Horacio Arredondo"
  URG_paulo_ortega_frusci:0 "Paulo Ortega Fruscí"
  URG_vittorio_amato_masso:0 "Vittorio Amato Masso"
- URG_ernesto_sanchez_elizondo:0 "Ernesto Sanchez Elizondo"
  URG_hector_lopez_camara:0 "Hector Lopez Camara"
  URG_eleazar_diaz_caminate:0 "Eleazar Díaz Caminate"
  URG_teo_bucardi_ramos:0 "Teo Bucardí Ramos"
@@ -2134,13 +2121,11 @@
  SHX_fu_zuoyi:0 "Fu Zuoyi"
  SHX_qu_yangke:0 "Qu Yangke"
  SHX_yan_xishan:0 "Yan Xishan"
- SHX_kong_fang:0 "Kong Fang"
  SHX_yang_lu:0 "Yang Lü"
  SHX_cheng_zhao:0 "Cheng Zhao"
  SHX_huang_peng:0 "Huang Peng"
  SHX_zhang_shen:0 "Zhang Shen"
  SHX_min_lan_tung_tin:0 "Min Lang Tung Tin"
- SHX_tan_fang:0 "Tan Fang"
  SHX_zhu_ting:0 "Zhu Ting"
  SHX_xie_wei:0 "Xie Wei"
  SHX_ma_tian:0 "Ma Tian"
@@ -2487,7 +2472,6 @@
  ordnance_factories_board:0 "Ordnance Factories Board"
  hindustan_aircraft:0 "Hindustan Aircraft Corporation"
  scindia_shipyard:0 "Scindia Shipyard"
- garden_reach_shipbuilders:0 "Garden Reach Shipbuilders"
  mazagon_dock_limited:0 "Mazagon Dock Limited"
  NZL_wairara9a_ranches:0 "Wairarapa Ranches"
  NZL_st_mary_bay_ship:0 "Saint Mary's Bay Shipbuilding"
