--- a/localisation/replace/ATL_l_english.yml
+++ b/localisation/replace/ATL_l_english.yml
@@ -342,7 +342,7 @@
  atl.9.a:0 "Heavy machinery and electronic systems blueprints"
  atl.9.b:0 "Their newest ship designs"
  atl.9.c:0 "Aircraft design research"
- atl.9.d:0 "Infantry and armor projects"
+ atl.9.e:0 "Infantry and armor projects"
  develop_akitselo_iron:0 "Develop Steel Plants in Akitselo"
  develop_hemaritsal_iron:0 "Develop Metal Works in Hemaritsal"
  develop_ladskamn_iron:0 "Develop Alloy Plants in Ladskamn"
