Lemuria, more states, reshuffled provinces

--- a/localisation/replace/AML_state_names_l_english.yml
+++ b/localisation/replace/AML_state_names_l_english.yml
@@ -979,15 +979,15 @@
  STATE_978:0 "Free Anarchists"
  STATE_979:0 "North W.U. of L."
  STATE_980:0 "South W.U. of L."
- STATE_981:0 "Kalari Kingdom"
+ STATE_981:0 "Western Kalari"
  STATE_982:0 "Lasnova"
  STATE_983:0 "Suisse Colony"
  STATE_984:0 "Audenshire"
  STATE_985:0 "Free Lemuria"
- STATE_986:0 "Qlach Avengers"
+ STATE_986:0 "Eastern Ackerson Desert"
  STATE_987:0 "Hur Peninsula"
- STATE_988:0 "Ackerson Desert"
- STATE_989:0 "East B. Lemuria"
+ STATE_988:0 "Western Ackerson Desert"
+ STATE_989:0 "Southeastern Ackerson Desert"
  STATE_990:0 "Southern Coast"
  STATE_991:0 "Pantiya 2"
  STATE_992:0 "Kumari 1"
@@ -998,3 +998,10 @@
  STATE_997:0 "Dangleng"
  STATE_998:0 "West Tangwan"
  STATE_999:0 "Kobaulashlivi"
+ STATE_1000:0 "Eastern Kalari"
+ STATE_1001:0 "Chola 2"
+ STATE_1002:0 "Chola 3"
+ STATE_1003:0 "Ihara Mountains"
+ STATE_1004:0 "Gawete Strip"
+ STATE_1005:0 "Southwestern Ackerson Desert"
+ STATE_1006:0 "Northern Ackerson Desert"
