--- a/localisation/replace/AML_loading_tips_l_english.yml
+++ b/localisation/replace/AML_loading_tips_l_english.yml
@@ -102,3 +102,15 @@
  LOADING_TIP_100:0 "The long sobs of violins of autumn. Soothe my heart with a monotone languor.\n - SOE coded transmission to French resistance"
  LOADING_TIP_101:0 "A State like Switzerland, which is nothing but a pimple on the face of Europe, cannot be allowed to continue.\n- Adolf Hitler"
  LOADING_TIP_102:0 "\"I know my rights, namely that I have none, and therefore nothing to lose.\"\n - Sumukivi Aepa’ato"
+ LOADING_TIP_103:0 "\"Dempsey? He couldn't fight his way out of an old cobweb.\"\n - General Miles Fritzroy"
+ LOADING_TIP_104:0 "\"Fitzroy? That baboon's ass is dumber than my horse.\"\n - General Miles Dempsey"
+ LOADING_TIP_105:0 "\"Four corners. Four Winds. Slide home the rifle bolt.\"\n - Coded Atlantean Transmission"
+ LOADING_TIP_106:0 "\"By bullet, by sword, or by blood - as God wills it!\"\n - British Lemurian Garrison Motto"
+ LOADING_TIP_107:0 "\"The majority of men are worse than sheep - at least sheep don't criticize their leader.\"\n - Yang Xinyi Luo"
+ LOADING_TIP_108:0 "\"My men will follow me into hell and back. I decide when and where they fight - not some worthless bureaucrat in London!\"\n - General Miles Dempsey"
+ LOADING_TIP_109:0 "\"Our gods have cursed us, and your white god has blessed you. This is not our home any longer; it is our prison.\"\n - King Wanulu of Qlach upon surrendering to the British."
+ LOADING_TIP_110:0 "Everything the sea touches is ours\n - Atlantean Marine Motto"
+ LOADING_TIP_111:0 "\"Atlantean air power? Ha! A group of frightened school children with kites could do better!\"\n - German Messerschmitt pilot"
+ LOADING_TIP_112:0 " The People \n The Gods \n The State \n - Inscription on the wall of the Blue Forum"
+ LOADING_TIP_113:0 "\"Not bad for a frightened school boy with a kite? Eh, Fritz?\"\n - Capt. Pergin Texuret, Atlantean Bomber Pilot \n 1945, over Berlin"
+ LOADING_TIP_114:0 "\"PAV VAKEA!\"\n - Battlecry heard on Crescent Beach, Atlantean invasion of Northern Germany."
