--- a/localisation/replace/AML_victory_points_l_english.yml
+++ b/localisation/replace/AML_victory_points_l_english.yml
@@ -1055,3 +1055,92 @@
  VICTORY_POINTS_3712:0 "Concord"
  VICTORY_POINTS_4445:0 "Montpelier"
  VICTORY_POINTS_3732:0 "Augusta"
+ VICTORY_POINTS_14324:0 "Port Lémurien"
+ VICTORY_POINTS_8502:0 "Oysterport"
+ VICTORY_POINTS_14646:0 "Sitanamupra"
+ VICTORY_POINTS_14653:0 "Deviyo"
+ VICTORY_POINTS_14668:0 "Sanduro"
+ VICTORY_POINTS_14672:0 "Ratu"
+ VICTORY_POINTS_14280:0 "Kantoru"
+ VICTORY_POINTS_14682:0 "Denitoramma"
+ VICTORY_POINTS_14287:0 "Jumuparillaka"
+ VICTORY_POINTS_14619:0 "Kura Kati"
+ VICTORY_POINTS_14614:0 "Tangki"
+ VICTORY_POINTS_14268:0 "Nilam"
+ VICTORY_POINTS_14626:0 "Pitiyachola"
+ VICTORY_POINTS_14629:0 "Gundrasupitla"
+ VICTORY_POINTS_14265:0 "Terku"
+ VICTORY_POINTS_14266:0 "Vila de São Nicolau"
+ VICTORY_POINTS_14640:0 "Umbugarla"
+ VICTORY_POINTS_14636:0 "Tiwi"
+ VICTORY_POINTS_9062:0 "Mulatanam"
+ VICTORY_POINTS_14591:0 "Camaveiyil"
+ VICTORY_POINTS_14593:0 "Velaccamaveiyil"
+ VICTORY_POINTS_8925:0 "Laragiya"
+ VICTORY_POINTS_14585:0 "Daly"
+ VICTORY_POINTS_14565:0 "Jarraka"
+ VICTORY_POINTS_14559:0 "Turamu"
+ VICTORY_POINTS_14372:0 "Atika"
+ VICTORY_POINTS_8495:0 "Kilak"
+ VICTORY_POINTS_14348:0 "Kumagandarivi"
+ VICTORY_POINTS_14346:0 "Cantanakkattai"
+ VICTORY_POINTS_14343:0 "Attupil"
+ VICTORY_POINTS_14340:0 "Palivari"
+ VICTORY_POINTS_14275:0 "Raktarvannam"
+ VICTORY_POINTS_14279:0 "Peruvala"
+ VICTORY_POINTS_14955:0 "Lemisara"
+ VICTORY_POINTS_14276:0 "Biloka"
+ VICTORY_POINTS_14331:0 "Mabusi"
+ VICTORY_POINTS_14898:0 "Horaka"
+ VICTORY_POINTS_14931:0 "Ilayaci"
+ VICTORY_POINTS_14917:0 "Ishiram"
+ VICTORY_POINTS_2905:0 "Shakwaram"
+ VICTORY_POINTS_14865:0 "Kasharaan"
+ VICTORY_POINTS_14852:0 "Saitasaban"
+ VICTORY_POINTS_14843:0 "Nyeupe"
+ VICTORY_POINTS_14344:0 "Shahan"
+ VICTORY_POINTS_14838:0 "Amenie"
+ VICTORY_POINTS_14320:0 "Dielle"
+ VICTORY_POINTS_5323:0 "Deutsgrenstat"
+ VICTORY_POINTS_5346:0 "Gammon"
+ VICTORY_POINTS_14813:0 "Toqueville"
+ VICTORY_POINTS_14492:0 "Petersby"
+ VICTORY_POINTS_14491:0 "Guhrnstown"
+ VICTORY_POINTS_14770:0 "Kalgatunga"
+ VICTORY_POINTS_14312:0 "New Valkenburg"
+ VICTORY_POINTS_6815:0 "Ellesburg"
+ VICTORY_POINTS_14342:0 "Merkku"
+ VICTORY_POINTS_14411:0 "Vendurutana"
+ VICTORY_POINTS_14379:0 "Bhamavani"
+ VICTORY_POINTS_14387:0 "Nandrigura"
+ VICTORY_POINTS_14398:0 "Tumi"
+ VICTORY_POINTS_14390:0 "Desdinraga"
+ VICTORY_POINTS_7714:0 "Tetinar"
+ VICTORY_POINTS_14731:0 "Morganastown"
+ VICTORY_POINTS_14721:0 "Myrddin"
+ VICTORY_POINTS_14693:0 "Agarston"
+ VICTORY_POINTS_14699:0 "Pendleville"
+ VICTORY_POINTS_5540:0 "Danspost"
+ VICTORY_POINTS_8947:0 "Kilespost"
+ VICTORY_POINTS_14549:0 "Anchwhirram"
+ VICTORY_POINTS_14501:0 "Meyerston"
+ VICTORY_POINTS_14305:0 "Pama Station"
+ VICTORY_POINTS_14430:0 "Audenshire"
+ VICTORY_POINTS_14420:0 "Worrorra"
+ VICTORY_POINTS_14458:0 "Elsinore"
+ VICTORY_POINTS_14445:0 "Vikteria"
+ VICTORY_POINTS_14463:0 "New Hampstead"
+ VICTORY_POINTS_14481:0 "Tinton"
+ VICTORY_POINTS_14486:0 "Melton"
+ VICTORY_POINTS_8703:0 "Nana Station"
+ VICTORY_POINTS_14783:0 "Jandhragara"
+ VICTORY_POINTS_14787:0 "Elumistdragara"
+ VICTORY_POINTS_14804:0 "Agneyashila"
+ VICTORY_POINTS_14748:0 "Shilvertown"
+ VICTORY_POINTS_8399:0 "Romanobile"
+ VICTORY_POINTS_14888:0 "Milimia"
+ VICTORY_POINTS_7036:0 "Nusedrimana"
+ VICTORY_POINTS_7241:0 "Manhakadrigiri"
+ VICTORY_POINTS_8799:0 "Yirram"
+ VICTORY_POINTS_14456:0 "Pilesbury"
+ VICTORY_POINTS_14903: "Sanggofesaran"
