Added Kumari and British-Lemurian party names.

--- a/localisation/replace/AML_parties_l_english.yml
+++ b/localisation/replace/AML_parties_l_english.yml
@@ -24,3 +24,12 @@
  THU_communism_party:0 "TIP"
  THU_communism_party_long:0 "Thule International Party"
  THU_fascism_party:0 "Thuleman Order"
+ BLM_communism_party:0 "Lemurian Workers Party"
+ BLM_neutrality_party_long:0 "The Queens Royal Party of British Lemuria"
+ BLM_neutrality_party:0 "TQRPBL"
+ BLM_democratic_party:0 "High Tory Party"
+ BLM_fascism_party:0 "Anglish Union Party"
+ KUM_democratic_party:0 "Liberal Democratic Party"
+ KUM_neutrality_party:0 "Kumari Royalist Movement"
+ KUM_communism_party:0 "Communist Party of Kumari"
+ KUM_fascism_party:0 "Kumari Kandum Congress"
