State names on Lemuria updated

--- a/localisation/replace/AML_countries_cosmetic_l_english.yml
+++ b/localisation/replace/AML_countries_cosmetic_l_english.yml
@@ -4,7 +4,7 @@
  GEQ_REOM_neutrality:0 "Empire of Mu"
  GEQ_REOM_neutrality_DEF:0 "the Empire of Mu"
  GEQ_REOM_fascism:0 "Empire of Mu"
- GEQ_REOM_fascism_DEF:0 "The Empire of Mu"
+ GEQ_REOM_fascism_DEF:0 "the Empire of Mu"
  GEQ_REOM_democratic:0 "Republic of Mu"
  GEQ_REOM_democratic_DEF:0 "the Republic of Mu"
  GEQ_REOM_communism:0 "Mu Commune"
