--- a/localisation/replace/AML_state_names_l_english.yml
+++ b/localisation/replace/AML_state_names_l_english.yml
@@ -796,18 +796,18 @@
  STATE_795:0 "Santarém"
  STATE_796:0 "North Angola"
  STATE_797:0 "East Tangwan"
- STATE_798:0 "Kumari 2"
+ STATE_798:0 "Kurukattai"
  STATE_799:0 "Dulgwa Mabong"
- STATE_800:0 "Sonduru"
- STATE_801:0 "Pantiya 3"
- STATE_802:0 "Kumari 3"
+ STATE_800:0 "Ratulismara"
+ STATE_801:0 "Gatisrahaval"
+ STATE_802:0 "Kilakkatai"
  STATE_803:0 "Qazeni"
- STATE_804:0 "Pantiya 1"
+ STATE_804:0 "Boranepatera"
  STATE_805:0 "Portuguese Utura"
  STATE_806:0 "Nulang"
- STATE_807:0 "Utura"
+ STATE_807:0 "Utukalla"
  STATE_808:0 "Rengtsiu"
- STATE_809:0 "Chola"
+ STATE_809:0 "Sabavtresha"
  STATE_810:0 "Va'asi"
  STATE_811:0 "Anaga'a"
  STATE_812:0 "Line'e"
@@ -968,40 +968,86 @@
  STATE_967:0 "Zenigal"
  STATE_968:0 "Aurora Islands"
  STATE_969:0 "Nacre Islands"
- STATE_970:0 "Akamatuli"
- STATE_971:0 "Meru Kumari"
- STATE_972:0 "Aurtura Colony"
- STATE_973:0 "Lankr"
- STATE_974:0 "Werreurbro"
+ STATE_970:0 "Yabiverle"
+ STATE_971:0 "Mekimari"
+ STATE_972:0 "Arthurshyre"
+ STATE_973:0 "Lankrshyre"
+ STATE_974:0 "Normanshyre"
  STATE_975:0 "Free Cities"
  STATE_976:0 "Free Cities 2"
  STATE_977:0 "Arcadia"
- STATE_978:0 "Free Anarchists"
- STATE_979:0 "North W.U. of L."
- STATE_980:0 "South W.U. of L."
- STATE_981:0 "Western Kalari"
- STATE_982:0 "Lasnova"
+ STATE_978:0 "Angevinshyre"
+ STATE_979:0 "Morrisonshyre"
+ STATE_980:0 "Newanglshyre"
+ STATE_981:0 "Pubavruta"
+ STATE_982:0 "Getsmaraba"
  STATE_983:0 "Suisse Colony"
- STATE_984:0 "Audenshire"
- STATE_985:0 "Free Lemuria"
- STATE_986:0 "Eastern Ackerson Desert"
- STATE_987:0 "Hur Peninsula"
- STATE_988:0 "Western Ackerson Desert"
- STATE_989:0 "Southeastern Ackerson Desert"
- STATE_990:0 "Southern Coast"
- STATE_991:0 "Pantiya 2"
- STATE_992:0 "Kumari 1"
+ STATE_984:0 "Audenshyre"
+ STATE_985:0 "Pileshyre"
+ STATE_986:0 "E Ackerson Desert"
+ STATE_987:0 "Fitzharaldshyre"
+ STATE_988:0 "W Ackerson Desert"
+ STATE_989:0 "SE Ackerson Desert"
+ STATE_990:0 "Roseshyre"
+ STATE_991:0 "Upper Thansava"
+ STATE_992:0 "Demistalavai"
  STATE_993:0 "Pantiya-Kobaulashlivi Strip"
  STATE_994:0 "Dutch Chola"
- STATE_995:0 "Macehualuti"
+ STATE_995:0 "Gawarii"
  STATE_996:0 "Dom Henrique Islands"
  STATE_997:0 "Dangleng"
  STATE_998:0 "West Tangwan"
- STATE_999:0 "Kobaulashlivi"
- STATE_1000:0 "Eastern Kalari"
- STATE_1001:0 "Chola 2"
- STATE_1002:0 "Chola 3"
- STATE_1003:0 "Ihara Mountains"
+ STATE_999:0 "Yaci"
+ STATE_1000:0 "Daimetarha"
+ STATE_1001:0 "Vichamanshatala"
+ STATE_1002:0 "Transavmala"
+ STATE_1003:0 "Ihara Mountain State"
  STATE_1004:0 "Gawete Strip"
- STATE_1005:0 "Southwestern Ackerson Desert"
- STATE_1006:0 "Northern Ackerson Desert"
+ STATE_1005:0 "SW Ackerson Desert"
+ STATE_1006:0 "N Ackerson Desert"
+ STATE_1007:0 "Marianshyre"
+ STATE_1008:0 "Beaufortshyre"
+ STATE_1009:0 "Willardshyre"
+ STATE_1010:0 "Ravenshyre"
+ STATE_1011:0 "Larshyre"
+ STATE_1012:0 "Weldonshyre"
+ STATE_1013:0 "Bancroftshyre"
+ STATE_1014:0 "Gwainshyre"
+ STATE_1015:0 "Corwynshyre"
+ STATE_1016:0 "Sinclairshyre"
+ STATE_1017:0 "Binnipai"
+ STATE_1018:0 "Chakkrumivam"
+ STATE_1019:0 "Dinhastavai"
+ STATE_1020:0 "Hakarnisha"
+ STATE_1021:0 "Ghashigava"
+ STATE_1022:0 "Mutsranaha"
+ STATE_1023:0 "Dribaturahal"
+ STATE_1024:0 "Canikkima"
+ STATE_1025:0 "Jutumagahal"
+ STATE_1026:0 "Vetismatahal"
+ STATE_1027:0 "Mulatavai"
+ STATE_1028:0 "Itoemurea"
+ STATE_1029:0 "Enmagrame"
+ STATE_1030:0 "Migramate"
+ STATE_1031:0 "Jitamshara"
+ STATE_1032:0 "Qavenari"
+ STATE_1033:0 "Hoshmurala"
+ STATE_1034:0 "Resakilla"
+ STATE_1035:0 "Topovotta"
+ STATE_1036:0 "Bhosanmore"
+ STATE_1037:0 "Umutratta"
+ STATE_1038:0 "Shakutta"
+ STATE_1039:0 "Burumpakalla"
+ STATE_1040:0 "Manpargatu"
+ STATE_1041:0 "Lower Thansava"
+ STATE_1042:0 "Lanimawnge"
+ STATE_1043:0 "Orporbuga"
+ STATE_1044:0 "Pranshimagahal"
+ STATE_1045:0 "Wetishimagahal"
+ STATE_1046:0 "Weligatebe"
+ STATE_1047:0 "Onipravelu"
+ STATE_1048:0 "Igainemu"
+ STATE_1049:0 "Tagreshibe"
+ STATE_1050:0 "Poitoushyre"
+ STATE_1051:0 "Manishyre"
+ STATE_1052:0 "Belshyre"
