--- a/localisation/replace/AML_state_names_l_english.yml
+++ b/localisation/replace/AML_state_names_l_english.yml
@@ -973,8 +973,8 @@
  STATE_972:0 "Arthurshyre"
  STATE_973:0 "Lankrshyre"
  STATE_974:0 "Normanshyre"
- STATE_975:0 "Free Cities"
- STATE_976:0 "Free Cities 2"
+ STATE_975:0 "Deutsgrenstat"
+ STATE_976:0 "Ellsburg"
  STATE_977:0 "Arcadia"
  STATE_978:0 "Angevinshyre"
  STATE_979:0 "Morrisonshyre"
