--- a/localisation/replace/AML_countries_l_english.yml
+++ b/localisation/replace/AML_countries_l_english.yml
@@ -83,18 +83,18 @@
  UTU_democratic_ADJ:0 "Uturan"
  UTU_neutrality_ADJ:0 "Uturan"
  UTU_communism_ADJ:0 "Uturan"
- SND_fascism:0 "United Siduran State"
- SND_fascism_DEF:0 "the United Siduran State"
- SND_democratic:0 "Siduru"
- SND_democratic_DEF:0 "Siduru"
- SND_neutrality:0 "Siduru"
- SND_neutrality_DEF:0 "Siduru"
- SND_communism:0 "Siduran Soviet Republic"
- SND_communism_DEF:0 "the Siduran Soviet Republic"
- SND_fascism_ADJ:0 "Siduran"
- SND_democratic_ADJ:0 "Siduran"
- SND_neutrality_ADJ:0 "Siduran"
- SND_communism_ADJ:0 "Siduran"
+ SDU_fascism:0 "United Siduran State"
+ SDU_fascism_DEF:0 "the United Siduran State"
+ SDU_democratic:0 "Siduru"
+ SDU_democratic_DEF:0 "Siduru"
+ SDU_neutrality:0 "Siduru"
+ SDU_neutrality_DEF:0 "Siduru"
+ SDU_communism:0 "Siduran Soviet Republic"
+ SDU_communism_DEF:0 "the Siduran Soviet Republic"
+ SDU_fascism_ADJ:0 "Siduran"
+ SDU_democratic_ADJ:0 "Siduran"
+ SDU_neutrality_ADJ:0 "Siduran"
+ SDU_communism_ADJ:0 "Siduran"
  LSN_fascism:0 "Lasnova"
  LSN_fascism_DEF:0 "Lasnova"
  LSN_democratic:0 "Lasnovan Federation"
